# Panoramic

./: Readme.md  panoramic.cabal
.devcontainer/: compose.yaml  devcontainer.json
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: Validation.hs
src/Exceptions/: InvalidMaritalStatus.hs  InvalidPerson.hs  InvalidPhoneNumber.hs  InvalidSocialSecurityNumber.hs
src/Models/: EditablePerson.hs  ValidatedPerson.hs
src/Models/Person/: FirstName.hs  LastName.hs  MaritalStatus.hs  PhoneNumber.hs  SocialSecurityNumber.hs
