name:                panoramic
version:             0.0.0.0
synopsis:            panoramic coding challenge
description:         
homepage:            
license:             
license-file:        
author:              David Martel
maintainer:          
category:            
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Validation
                       Models.ValidatedPerson
                       Models.EditablePerson
  build-depends:       base
                     , text
                     , witch
                     , regex-compat
  default-language:    Haskell98

executable panoramic
  hs-source-dirs:      app
  main-is:             Setup.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base <= 5
                     , panoramic
                     , text    
                     , witch 
                     , regex-compat               
  default-language:    Haskell98

